added doCheckInMenu(String option, SearchType... searchTypes) method in Menu.java